--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "react-scripts": "^5.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "lucide-react": "^0.263.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.0",
